--- a/frontend/src/components/EmployeeRegistration/EmployeeRegistration.css
+++ b/frontend/src/components/EmployeeRegistration/EmployeeRegistration.css
@@ -51,10 +51,22 @@
     margin-left: 3rem;
     margin-top: 2rem;
 }
-input[type=text],input[type=email],input[type=date]{
+input[type=text],input[type=email],input[type=date],input[type=number], input[type=textarea], input[type=password]{
     background-color: #262626;
 }
 select{
     background-color: #262626;
-    width:100%;
+    color: #7F7F7F;
+    border-radius: 5px;
+    width: 100%;
+    padding: 7px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+.btn-style2{
+    margin-top: 1rem;
+    text-align: right;
+    margin-right: 4rem;
+    background-color: #404040;
 }
